# RotaryQuant

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: FROM_ATTENTION_TO_CONSUMER_HARDWARE.md  PATHWAY_PROVEN_CHECKLIST.md  benchmark_spec.md
mlx-lm/mlx_lm/: convert.py  expert_offload.py  expert_weight_loader.py  repack_experts.py  utils.py
mlx-lm/tests/: test_dtype_debug.py  test_fused_isoquant_attention.py  test_hybrid_cache.py  test_kimi_mla_isoquant_dkv.py  test_mlx_isoquant.py  test_models.py  test_pack_debug.py  test_prompt_cache.py
mojo-bench/: pixi.toml
mojo-bench/harness/: __init__.mojo  output.mojo  stats.mojo
mojo-bench/kernels/: bench_matmul.mojo  bench_rope.mojo  bench_softmax.mojo
results/: gemma4_pathway_quality.json  llama_cpp_isoquant3_bench.json  llama_cpp_isoquant3_fused_bench.json  llama_cpp_turbo3_bench.json  llama_cpp_turbo3_vs_isoquant3_final.json  nemotron120b_memory_scaling.json  nemotron120b_pathway_quality.json  qwen3_kv_depth_curve.json  qwen3_pathway_quality.json
results/agent_memory_eval/: gemma4_isoquant_scratchpad_merge_sort_500tok.json  gemma4_isoquant_scratchpad_merge_sort_smoke.json  gemma4_isoquant_scratchpad_merge_sort_smoke_v2.json
results/profile/: gemma4_decode_breakdown.json  nemotron_decode_breakdown.json  qwen3_decode_breakdown.json
results/soak/: gemma4-layer-aware_soak_final.json  gemma4_2h_soak_final.json  (+6 more)
scripts/: benchmark_mlx_kernels.py  benchmark_moe_offload.py  bootstrap.sh  compare_mojo_vs_mlx.py  roofline_calibrate.py  validate_numerical_invariance.py
tests/: test_smoke.py
(+35 files in other folders)
